# personal-crates

./: .editorconfig  Cargo.toml  build-pacman-repo.yaml  run.sh  script.sh  test.sh
.github/workflows/: build.yaml
crates/args-to-json/: Cargo.toml
crates/args-to-json/src/: main.rs
crates/args-to-json/tests/: test.rs
crates/args-to-list/: Cargo.toml
crates/args-to-list/src/: main.rs
crates/args-to-list/tests/: test.rs
crates/break-line/: Cargo.toml
crates/break-line/src/: main.rs
crates/break-line/tests/: test.rs
crates/cjd/: Cargo.toml
crates/cjd/src/: args.rs  format.rs  main.rs
crates/find-executable/: Cargo.toml
crates/find-executable/src/: app.rs  filter.rs  main.rs  utils.rs
crates/find-unused-port/: Cargo.toml
crates/find-unused-port/src/: execute_command.rs  handle_output.rs  main.rs
crates/find-virtual-display/: Cargo.toml
crates/find-virtual-display/src/: check_input.rs  check_virtual_display.rs  execute_command.rs  handle_output.rs  main.rs  sequence.rs
crates/git-all-remotes/: Cargo.toml
crates/git-all-remotes/src/: args.rs  display_result.rs  error.rs  format.rs  main.rs  show_remote_list.rs
crates/is-port-free/: Cargo.toml
crates/is-port-free/src/: main.rs
crates/join-argv/: Cargo.toml
crates/join-argv/src/: main.rs
crates/join-argv/tests/: test.rs
crates/non-empty-argument/: Cargo.toml
crates/non-empty-argument/src/: main.rs
crates/parse-git-porcelain-status/: Cargo.toml
crates/parse-git-porcelain-status/src/: cli_args.rs  main.rs  parse.rs  sub.rs
crates/sequence/: Cargo.toml  sequence.rs  utils.rs
pkgbuild/: .gitignore
script/: Cargo.toml
script/src/: main.rs
template/: PKGBUILD
