[package]
name = "cjd"
description = "Convert between various JSON-like data formats"
version = "0.0.0"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "^4.1.4", features = ["derive"] }
pipe-trait = "^0.4.0"
serde = "^1.0.151"
serde_json = "^1.0.92"
serde_yaml = "^0.9.17"
toml = "^0.7.2"
json5 = "^0.4.1"
