[package]
name = "cjd"
description = "Convert between various JSON-like data formats"
version = "0.0.0"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "^4.1.11", features = ["derive"] }
pipe-trait = "^0.4.0"
serde = "^1.0.159"
serde_json = "^1.0.95"
serde_yaml = "^0.9.19"
toml = "^0.7.3"
json5 = "^0.4.1"
