[package]
name = "find-virtual-display"
version = "0.0.0"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "^3.2.17", features = ["derive"] }
derive_more = "^0.99.17"
thiserror = "^1.0.32"
typed-builder = "0.10.0"
command-extra = "^1.0.0"
pipe-trait = "^0.4.0"
