[package]
name = "git-all-remotes"
version = "0.0.0"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2021"

[dependencies]
git2 = "^0.15.0"
nu-ansi-term = "^0.46.0"
thiserror = "^1.0.32"
derive_more = "^0.99.17"
typed-builder = "^0.10.0"
os_display = "^0.1.3"
os_str_bytes = "^6.2.0"
pipe-trait = "^0.4.0"
clap = { version = "^3.2.16", features = ["derive"] }
clap-utilities = "^0.1.0"
serde = "^1.0.142"
serde_json = "^1.0.83"
serde_yaml = "^0.9.4"
toml = "^0.5.9"
json5 = "^0.4.1"
