[package]
name = "git-all-remotes"
version = "0.0.0"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2021"

[dependencies]
git2 = "^0.15.0"
nu-ansi-term = "^0.46.0"
thiserror = "^1.0.37"
derive_more = "^0.99.17"
os_display = "^0.1.3"
os_str_bytes = "^6.3.0"
is-terminal = "^0.3.0"
pipe-trait = "^0.4.0"
clap = { version = "^3.2.22", features = ["derive"] }
clap-utilities = "^0.2.0"
