[package]
name = "git-all-remotes"
version = "0.0.0"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2021"

[dependencies]
git2 = "^0.15.0"
yansi = "^0.5.1"
thiserror = "^1.0.37"
derive_more = "^0.99.17"
os_display = "^0.1.3"
os_str_bytes = "^6.3.1"
is-terminal = "^0.4.1"
pipe-trait = "^0.4.0"
clap = { version = "^4.0.29", features = ["derive"] }
clap-utilities = "^0.2.0"
